--- a/RetamDatabase/src/main/resources/fxml/projectScene/ObjectivesInfo.fxml
+++ b/RetamDatabase/src/main/resources/fxml/projectScene/ObjectivesInfo.fxml
@@ -5,10 +5,9 @@
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.TitledPane?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="650.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fundabitat.retam.controllers.projectScene.ObjectivesInfoController">
@@ -19,52 +18,31 @@
                     <content>
                         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                             <children>
-                                <ScrollPane layoutX="243.0" layoutY="67.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                                    <content>
-                                        <GridPane hgap="20.0" prefHeight="92.0" prefWidth="600.0" vgap="20.0">
-                                            <columnConstraints>
-                                                <ColumnConstraints hgrow="ALWAYS" maxWidth="210.0" minWidth="-Infinity" />
-                                                <ColumnConstraints hgrow="ALWAYS" maxWidth="478.0" minWidth="10.0" prefWidth="478.0" />
-                                            </columnConstraints>
-                                            <rowConstraints>
-                                                <RowConstraints maxHeight="-Infinity" minHeight="20.0" vgrow="ALWAYS" />
-                                                <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" vgrow="ALWAYS" />
-                                                <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" vgrow="ALWAYS" />
-                                            </rowConstraints>
-                                            <children>
-                                                <Label minHeight="-Infinity" minWidth="-Infinity" text="Objetivo General" GridPane.hgrow="ALWAYS" GridPane.vgrow="ALWAYS">
+                                <ScrollPane fitToWidth="true" layoutX="243.0" layoutY="67.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                           <content>
+                              <VBox maxWidth="600.0" prefHeight="200.0" prefWidth="100.0" spacing="10.0">
+                                 <children>
+                                                <Label minHeight="-Infinity" minWidth="-Infinity" text="Objetivo General">
                                                     <font>
                                                         <Font name="System Bold" size="13.0" />
                                                     </font>
                                                 </Label>
-                                                <Label minHeight="-Infinity" minWidth="-Infinity" text="Objetivo Especifico" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.vgrow="ALWAYS">
+                                                <Label fx:id="generalObjective" maxWidth="600.0" minHeight="-Infinity" minWidth="400.0" prefWidth="200.0" text="&lt;general objective&gt;" wrapText="true" />
+                                                <Label minHeight="-Infinity" minWidth="-Infinity" text="Objetivo Especifico">
                                                     <font>
                                                         <Font name="System Bold" size="13.0" />
                                                     </font>
                                                 </Label>
-                                                <Label layoutX="10.0" layoutY="47.0" minHeight="-Infinity" minWidth="-Infinity" text="Methodología" GridPane.rowIndex="2">
+                                                <Label fx:id="specificObjective" maxWidth="600.0" minHeight="-Infinity" minWidth="400.0" prefWidth="200.0" text="&lt;specific objective&gt;" wrapText="true" />
+                                                <Label minHeight="-Infinity" minWidth="-Infinity" text="Methodología">
                                                     <font>
                                                         <Font name="System Bold" size="13.0" />
                                                     </font>
                                                 </Label>
-                                                <Label fx:id="generalObjective" layoutX="10.0" layoutY="17.0" minHeight="-Infinity" minWidth="-Infinity" text="&lt;general objective&gt;" wrapText="true" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.vgrow="ALWAYS">
-                                                    <font>
-                                                        <Font name="System Bold" size="13.0" />
-                                                    </font>
-                                                </Label>
-                                                <Label fx:id="specificObjective" layoutX="170.0" layoutY="12.0" minHeight="-Infinity" minWidth="-Infinity" text="&lt;specific objective&gt;" wrapText="true" GridPane.columnIndex="1" GridPane.rowIndex="1">
-                                                    <font>
-                                                        <Font name="System Bold" size="13.0" />
-                                                    </font>
-                                                </Label>
-                                                <Label fx:id="methodology" layoutX="180.0" layoutY="12.0" minHeight="-Infinity" minWidth="-Infinity" text="&lt;methodology&gt;" wrapText="true" GridPane.columnIndex="1" GridPane.rowIndex="2">
-                                                    <font>
-                                                        <Font name="System Bold" size="13.0" />
-                                                    </font>
-                                                </Label>
-                                            </children>
-                                        </GridPane>
-                                    </content>
+                                                <Label fx:id="methodology" maxWidth="600.0" minHeight="-Infinity" minWidth="400.0" prefWidth="200.0" text="&lt;methodology&gt;" wrapText="true" />
+                                 </children>
+                              </VBox>
+                           </content>
                                 </ScrollPane>
                             </children>
                         </AnchorPane>
@@ -74,7 +52,15 @@
                     <content>
                         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                             <children>
-                                <ListView fx:id="initiativesListView" layoutX="14.0" layoutY="14.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="20.0" />
+                        <TitledPane animated="false" collapsible="false" layoutX="-42.0" layoutY="-83.0" text="Iniciativa para la formulacion del proyecto" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="20.0">
+                          <content>
+                            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                                 <children>
+                                            <ListView fx:id="initiativesListView" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                                 </children>
+                              </AnchorPane>
+                          </content>
+                        </TitledPane>
                             </children>
                         </AnchorPane>
                     </content>
@@ -88,7 +74,15 @@
                     <content>
                         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                             <children>
-                                <ListView fx:id="populationPartListView" layoutX="73.0" layoutY="46.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="20.0" />
+                        <TitledPane animated="false" collapsible="false" layoutX="-81.0" layoutY="-58.0" text="Participacion de la poblacion" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="20.0">
+                          <content>
+                            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                                 <children>
+                                            <ListView fx:id="populationPartListView" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                                 </children>
+                              </AnchorPane>
+                          </content>
+                        </TitledPane>
                             </children>
                         </AnchorPane>
                     </content>
