--- a/RetamDatabase/src/main/resources/fxml/projectScene/ProjectInfo.fxml
+++ b/RetamDatabase/src/main/resources/fxml/projectScene/ProjectInfo.fxml
@@ -20,12 +20,12 @@
                     <content>
                         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                             <children>
-                                <Accordion fx:id="descriptorsAccordion" focusTraversable="false" layoutX="25.0" layoutY="128.0" AnchorPane.bottomAnchor="25.0" AnchorPane.leftAnchor="25.0" AnchorPane.rightAnchor="25.0" AnchorPane.topAnchor="125.0">
+                                <Accordion fx:id="descriptorsAccordion" focusTraversable="false" layoutX="25.0" layoutY="128.0" AnchorPane.bottomAnchor="25.0" AnchorPane.leftAnchor="25.0" AnchorPane.rightAnchor="25.0" AnchorPane.topAnchor="140.0">
                                     <panes>
                                         <TitledPane animated="false" collapsible="false" expanded="false" focusTraversable="false" text="Descriptores" />
                                     </panes>
                                 </Accordion>
-                                <GridPane layoutX="23.0" layoutY="21.0" prefHeight="90.0" prefWidth="604.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="20.0">
+                                <GridPane layoutX="23.0" layoutY="21.0" prefHeight="120.0" prefWidth="604.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="20.0">
                                     <columnConstraints>
                                         <ColumnConstraints hgrow="SOMETIMES" maxWidth="351.0" minWidth="10.0" percentWidth="50.0" prefWidth="306.0" />
                                         <ColumnConstraints hgrow="SOMETIMES" maxWidth="316.0" minWidth="10.0" percentWidth="50.0" prefWidth="304.0" />
@@ -33,6 +33,7 @@
                                     <rowConstraints>
                                         <RowConstraints maxHeight="39.0" minHeight="10.0" prefHeight="33.0" valignment="TOP" vgrow="SOMETIMES" />
                                         <RowConstraints maxHeight="57.0" minHeight="10.0" prefHeight="57.0" vgrow="SOMETIMES" />
+                              <RowConstraints maxHeight="57.0" minHeight="10.0" prefHeight="33.0" vgrow="SOMETIMES" />
                                     </rowConstraints>
                                     <children>
                               <HBox prefHeight="100.0" prefWidth="200.0">
@@ -75,6 +76,38 @@
                                                       <Font size="14.0" />
                                                   </font>
                                               </Label>
+                                 </children>
+                              </HBox>
+                              <HBox prefHeight="100.0" prefWidth="200.0" spacing="7.0" GridPane.rowIndex="2">
+                                 <children>
+                                    <Label text="Fecha Inicio:">
+                                       <font>
+                                          <Font name="System Bold" size="14.0" />
+                                       </font>
+                                    </Label>
+                                    <Label fx:id="projectStartingDateLabel" text="&lt;starting date&gt;">
+                                       <font>
+                                          <Font size="14.0" />
+                                       </font>
+                                    </Label>
+                                 </children>
+                              </HBox>
+                              <HBox prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                                 <children>
+                                    <HBox prefHeight="100.0" prefWidth="200.0" spacing="7.0">
+                                       <children>
+                                          <Label text="Duración:">
+                                             <font>
+                                                <Font name="System Bold" size="14.0" />
+                                             </font>
+                                          </Label>
+                                          <Label fx:id="projectDurationLabel" text="&lt;duration&gt;">
+                                             <font>
+                                                <Font size="14.0" />
+                                             </font>
+                                          </Label>
+                                       </children>
+                                    </HBox>
                                  </children>
                               </HBox>
                                     </children>
